--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javax.servlet-3.0.0.v201112011016-sources.jar=C:\\Users\\Diego\\Desktop\\Arquivos-NetBeans\\javax.servlet-3.0.0.v201112011016-sources.jar
 file.reference.mysql-connector-java-8.0.21.jar=C:\\Users\\Diego\\Desktop\\Arquivos-NetBeans\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 includes=**
 j2ee.compile.on.save=true
@@ -39,8 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.servlet-3.0.0.v201112011016-sources.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${libs.jakartaee-web-api-9.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -67,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
